--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,10 @@ mod_id=mmorpg
 mod_version=4.0.18
 maven_group=net.fabricmc
 mod_archive_name=Mine_and_Slash_BETA
-minecraft_version=1.16.5
-forgeversion=36.2.29
+minecraft_version=1.20.1
+forgeversion=47.1.43
+mapping_version=2023.07.30
+mapping_channel=parchment
 # Curse
 curse_id=306575
 curse_release=beta
