--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,27 @@
 buildscript {
     repositories {
         maven { url = 'https://maven.minecraftforge.net' }
+        maven { url = 'https://maven.parchmentmc.org' }
+
         maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
         mavenCentral()
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '6+', changing: true
-        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
+        classpath 'org.parchmentmc:librarian:1.+'
+        classpath group: 'org.spongepowered', name: 'mixingradle', version: '+'
     }
 }
 
 plugins {
     id 'java'
     id 'idea'
-    id 'com.matthewprenger.cursegradle' version '1.4.0'
+    id 'maven-publish'
 }
+
 apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'org.parchmentmc.librarian.forgegradle'
+apply plugin: 'org.spongepowered.mixin'
 apply from: 'https://raw.githubusercontent.com/SizableShrimp/Forge-Class-Remapper/main/classremapper.gradle'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
@@ -31,7 +37,7 @@ repositories {
 minecraft {
     //mappings channel: "snapshot", version: "20201028-1.16.3"
 
-    mappings channel: 'official', version: "$project.minecraft_version"
+    mappings channel: "${mapping_channel}", version: "${mapping_version}-${minecraft_version}"
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
