--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,6 @@ mapping_version=2023.07.30
 mapping_channel=parchment
 # Curse
 curse_id=306575
-curse_release=beta
+curse_release=BETA
 # Dependencies
 curios_version=5.2.0-beta.3+1.20.1
