--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ minecraft {
     //mappings channel: "snapshot", version: "20201028-1.16.3"
 
     mappings channel: "${mapping_channel}", version: "${mapping_version}-${minecraft_version}"
+    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
