--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,11 @@ curse_release=BETA
 # Dependencies
 curios_version=5.2.0-beta.3+1.20.1
 jei_version=15.2.0.27
+
+
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=7890
+systemProp.https.proxyHost=127.0.0.1
+systemProp.https.proxyPort=7890
+systemProp.socks.proxyHost=127.0.0.1
+systemProp.socks.proxyPort=7890
