--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,12 @@ repositories {
             includeGroup "mezz.jei"
         }
     }
+    maven {
+        url "https://cursemaven.com"
+        content {
+            includeGroup "curse.maven"
+        }
+    }
 }
 
 minecraft {
@@ -118,6 +124,7 @@ dependencies {
 
     implementation fg.deobf("blank:Library_of_Exile-1.20.1:1.3.5")
     implementation fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
+    implementation fg.deobf("curse.maven:legendary-tooltips-532127:4662781")
 
     compileOnly fg.deobf("mezz.jei:jei-1.20.1-common-api:${project.jei_version}") //API for compile
     compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge-api:${project.jei_version}") //API for compile
