--- a/build.gradle
+++ b/build.gradle
@@ -45,12 +45,6 @@ repositories {
             includeGroup "mezz.jei"
         }
     }
-    maven {
-        url "https://cursemaven.com"
-        content {
-            includeGroup "curse.maven"
-        }
-    }
 }
 
 minecraft {
@@ -124,7 +118,6 @@ dependencies {
 
     implementation fg.deobf("blank:Library_of_Exile-1.20.1:1.3.5")
     implementation fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
-    implementation fg.deobf("curse.maven:legendary-tooltips-532127:4662781")
 
     compileOnly fg.deobf("mezz.jei:jei-1.20.1-common-api:${project.jei_version}") //API for compile
     compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge-api:${project.jei_version}") //API for compile
@@ -165,5 +158,16 @@ publishMods {
     changelog = file("CHANGELOG.txt").text
     type = BETA
     modLoaders.add("forge")
+    
+    curseforge {
+        accessToken = file("key.properties").text
+        projectId = "${curse_id}"
+        displayName = "${mod_archive_name}-${minecraft_version}-v${mod_version}"
+        minecraftVersions.add("${minecraft_version}")
+        minecraftVersions.add("1.20")
 
+        requires { slug = "library-of-exile" }
+        requires { slug = "curios" }
+
+    }
 }
