--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,17 @@ repositories {
     }
 
     maven { url 'https://repo1.maven.org/maven2/' }
+
+    maven {
+    name = "firstdarkMavenSnapshots"
+    url = uri("https://maven.firstdarkdev.xyz/snapshots")
+    }
+    maven {
+        url = "https://api.modrinth.com/maven"
+    }
+    repositories {
+        maven { url "https://maven.shedaniel.me" }
+    }
 }
 
 minecraft {
@@ -121,6 +132,7 @@ dependencies {
     implementation fg.deobf("blank:Library_of_Exile-1.20.1:1.3.5")
     implementation fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
     implementation 'org.codehaus.plexus:plexus-utils:4.0.0'
+    implementation fg.deobf("com.lowdragmc.photon:photon-forge-1.20.1:1.0.7.a")
 
     compileOnly fg.deobf("mezz.jei:jei-1.20.1-common-api:${project.jei_version}") //API for compile
     compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge-api:${project.jei_version}") //API for compile
