--- a/gradle.properties
+++ b/gradle.properties
@@ -12,5 +12,7 @@ mapping_channel=parchment
 # Curse
 curse_id=306575
 # Dependencies
+exile_library_version=1.5.1
+exile_library_version_range=[1.5.1,)
 curios_version=5.2.0-beta.3+1.20.1
 jei_version=15.2.0.27
