--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,6 @@ curse_id=306575
 exile_library_version=1.5.3
 curios_version=5.2.0-beta.3+1.20.1
 jei_version=15.2.0.27
+geckolib_version=1.20.1:4.4.5
+player_animator_version=1.0.2-rc1+1.20
+
